Improved the responsiveness of the 'Skills' section by making sure that rounded boxes within it had a little bit of a left margin, when displayed in the smallest screen sizes. So, that way, they no longer display pressed against the left edge of the browser window on mobile phones.

--- a/css/index.css
+++ b/css/index.css
@@ -589,6 +589,9 @@ textarea {
     #skills ul {
         padding-left: 0;
     }
+    #skills ul li {
+        margin-left: -0.5rem;
+    }
 }
 input:hover, textarea:hover {
     border-color: #8EACBB;
